--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title> Paulina Vera Cid | Analista de Datos </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Hola, mi nombre es<br />
+						Paulina Vera Cid </h1>
+						<p> Soy Ingeniera Comercial y Analista de Datos con más de 3 años de experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos.  
+    Me destaco por mi capacidad de transformar información compleja en insights claros y accionables, optimizando procesos y ayudando a la toma de decisiones estratégicas de manera eficiente. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -226,4 +226,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
