+ acerca de.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<div id="intro">
 						<h1>Hola, mi nombre es<br />
 						Paulina Vera Cid </h1>
-						<p> Soy Ingeniera Comercial y Analista de Datos con más de 3 años de experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos.  
-    Me destaco por mi capacidad de transformar información compleja en insights claros y accionables, optimizando procesos y ayudando a la toma de decisiones estratégicas de manera eficiente. </p>
+						<p> Soy Ingeniera Comercial y Analista de Datos con más de 3 años de experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por mi capacidad de transformar información compleja en insights claros y accionables, optimizando procesos y ayudando a la toma de decisiones estratégicas de manera eficiente. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,12 +53,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Experiencia Profesional</span>
+									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2>
+									<p>Soy Ingeniera Comercial con más de 3 años de experiencia en análisis de datos, limpieza de bases, modelamiento y desarrollo de dashboards interactivos. Me he especializado en transformar datos complejos en insights claros para la toma de decisiones estratégicas y la optimización de procesos</p>
+									<p><strong>Herramientas y tecnologías:</strong> Power BI, Excel avanzado, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau (básico).</p>
+									<p><strong>Fortalezas:</strong> análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -228,4 +226,5 @@
 	</body>
 
 </html>
+
 
