--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title> Paulina Vera Cid | Analista de Datos </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css?v=2" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -215,16 +215,17 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js?v=2"></script>
+			<script src="assets/js/jquery.scrollex.min.js?v=2"></script>
+			<script src="assets/js/jquery.scrolly.min.js?v=2"></script>
+			<script src="assets/js/browser.min.js?v=2"></script>
+			<script src="assets/js/breakpoints.min.js?v=2"></script>
+			<script src="assets/js/util.js?v=2"></script>
+			<script src="assets/js/main.js?v=2"></script>
 
 	</body>
 
 </html>
+
 
 
