Forzar actualizacion.html

--- a/index.html
+++ b/index.html
@@ -222,10 +222,15 @@
 			<script src="assets/js/breakpoints.min.js?v=2"></script>
 			<script src="assets/js/util.js?v=2"></script>
 			<script src="assets/js/main.js?v=2"></script>
+		git add index.html
+		git commit -m "Forzar deployment GitHub Pages"
+		git push origin main
+
 
 	</body>
 
 </html>
+
 
 
 
