--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Hola, mi nombre es<br />
-						Paulina Vera Cid </h1>
-						<p> Soy Ingeniera Comercial y Analista de Datos con más de 3 años de experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por mi capacidad de transformar información compleja en insights claros y accionables, optimizando procesos y ayudando a la toma de decisiones estratégicas de manera eficiente. </p>
+						<h1> Portafolio de Paulina Vera </h1>
+						<p><strong>Herramientas y tecnologías:</strong> Power BI, Excel avanzado, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
+						<p><strong>Fortalezas:</strong> análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
+						<p> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -55,9 +56,8 @@
 								<header class="major">
 									<span class="date">Experiencia Profesional</span>
 									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2>
-									<p>Soy Ingeniera Comercial con más de 3 años de experiencia en análisis de datos, limpieza de bases, modelamiento y desarrollo de dashboards interactivos. Me he especializado en transformar datos complejos en insights claros para la toma de decisiones estratégicas y la optimización de procesos</p>
-									<p><strong>Herramientas y tecnologías:</strong> Power BI, Excel avanzado, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau (básico).</p>
-									<p><strong>Fortalezas:</strong> análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
+									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
+
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -230,6 +230,7 @@
 	</body>
 
 </html>
+
 
 
 
