--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1> Portafolio de Paulina Vera </h1>
 						<p><strong>Herramientas y tecnologías:</strong> Power BI, Excel avanzado, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
 						<p><strong>Fortalezas:</strong> análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
-						<p> </p>
+						
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,9 +57,9 @@
 									<span class="date">Experiencia Profesional</span>
 									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2>
 									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
-
+									<p><strong> ¡Conoce mis proyectos!<strong> </p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>  
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -230,6 +230,7 @@
 	</body>
 
 </html>
+
 
 
 
