--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Experiencia Profesional</span>
-									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2>
+									// <span class="date"> Paulina Vera Cid | Analista de Datos </span> // 
+									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2> 
 									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
 									<p><strong> ¡Conoce mis proyectos!<strong> </p>
 								</header>
@@ -230,6 +230,7 @@
 	</body>
 
 </html>
+
 
 
 
