--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1> Portafolio de Paulina Vera </h1>
-						<p><strong>Herramientas y tecnologías:</strong> Power BI, Excel avanzado, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
-						<p><strong>Fortalezas:</strong> análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
+						<p><strong> Power BI, Excel, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
+						<p><strong> Análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
 						
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -230,6 +230,7 @@
 	</body>
 
 </html>
+
 
 
 
