--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> Portafolio de Paulina Vera </h1>
-						<p><strong> Power BI, Excel, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
-						<p><strong> Análisis de datos, interpretación de resultados, desarrollo de indicadores, automatización de procesos y creación de reportes interactivos.</p>
+						<h1> Portafolio <br />
+							Paulina Vera </h1>
+						<p><strong> Analista con experiencia en: Power BI, Excel, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
+						
 						
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -226,6 +227,7 @@
 	</body>
 
 </html>
+
 
 
 
