Acerca de mi update.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Paulina Vera - Analista de Datos </a></h2> 
+									<span class="date">Paulina Vera - Analista de Datos</span>
 									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
 									<p><strong> ¡Conoce mis proyectos!<strong> </p>
 								</header>
@@ -227,6 +227,7 @@
 	</body>
 
 </html>
+
 
 
 
