--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
 									<p><strong> ¡Conoce mis proyectos!<strong> </p>
 								</header>
-								
+								  
+								<ul class="actions special">
+									<li><a href="#" class="button large"></a></li>
+								</ul>
 							</article>
 
 						<!-- Posts -->
@@ -223,6 +226,7 @@
 	</body>
 
 </html>
+
 
 
 
