--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 						<h1> Portafolio <br />
 							Paulina Vera </h1>
 						<p><strong> Analista con experiencia en: Power BI, Excel, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
-						
-						
+						<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -226,6 +225,7 @@
 	</body>
 
 </html>
+
 
 
 
