--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Proyectos</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<!-- <li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -42,7 +42,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						</ul> --> 
 					</nav>
 
 				<!-- Main -->
@@ -64,8 +64,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
+										<span class="date">Noviembre, 2022</span>
+										<h2><a href="#"> PROYECTO LIMPIEZA 1 <br />
 										ipsum faucibus</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -76,8 +76,8 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
+										<span class="date">Agosto, 2022</span>
+										<h2><a href="#"> PROYECTO LIMPIEZA 2 <br />
 										imperdiet lorem</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
@@ -86,7 +86,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<span class="date">April 18, 2017</span>
 										<h2><a href="#">Ante mattis<br />
@@ -133,7 +133,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
@@ -225,6 +225,7 @@
 	</body>
 
 </html>
+
 
 
 
