--- a/index.html
+++ b/index.html
@@ -1,234 +1,209 @@
 <!DOCTYPE HTML>
 <!--
-	Paulina Vera Cid | Analista de datos
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Paulina Vera Cid | Analista de Datos
+    Template: Massively by HTML5 UP
+    html5up.net | @ajlkn
 -->
-<html>
-	<head>
-		<title> Paulina Vera Cid | Analista de Datos </title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css?v=2" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<html lang="es">
+<head>
+    <title>Paulina Vera Cid | Analista de Datos</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+    <link rel="stylesheet" href="assets/css/main.css?v=2" />
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1> Portafolio <br />
-							Paulina Vera </h1>
-						<p><strong> Analista con experiencia en: Power BI, Excel, SQL, Python (pandas, matplotlib, seaborn), SPSS, Bizagi, Tableau.</p>
-						<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+<body class="is-preload">
 
+<!-- Wrapper -->
+<div id="wrapper" class="fade-in">
 
-				
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Proyectos</a></li>
-							<!-- <li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul> --> 
-					</nav>
+    <!-- Intro -->
+    <div id="intro">
+        <h1>
+            Portafolio<br />
+            Paulina Vera
+        </h1>
 
-				<!-- Main -->
-					<div id="main">
+        <p>
+            <strong>
+                Analista de Datos con experiencia en Power BI, Excel, SQL, Python
+                (pandas, matplotlib, seaborn), SPSS, Bizagi y Tableau.
+            </strong>
+        </p>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<p>  Analista de Datos con experiencia en limpieza de datos, reportabilidad y desarrollo de dashboards interactivos. Me destaco por no solo optimizar, si no usar los datos con propósito. Busco de la información se traduzca en decisiones que mejoren procesos, equipos y resultados. </p>
-									<p><strong> ¡Conoce mis proyectos!<strong> </p>
-								</header>
-								  
-								<ul class="actions special">
-									<li><a href="#" class="button large"></a></li>
-								</ul>
-							</article>
+        <ul class="actions">
+            <li>
+                <a href="#nav" class="button icon solid solo fa-arrow-down scrolly">
+                    Continuar
+                </a>
+            </li>
+        </ul>
+    </div>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">Noviembre, 2022</span>
-										<h2><a href="#"> PROYECTO LIMPIEZA 1 <br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Agosto, 2022</span>
-										<h2><a href="#"> PROYECTO LIMPIEZA 2 <br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<!-- <article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article> -->
-							</section>
+    <!-- Nav -->
+    <nav id="nav">
+        <ul class="links">
+            <li class="active"><a href="index.html">Proyectos</a></li>
+            <li><a href="generic.html">Sobre mí</a></li>
+        </ul>
+    </nav>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+    <!-- Main -->
+    <div id="main">
 
-					</div>
+        <!-- Featured -->
+        <article class="post featured">
+            <header class="major">
+                <p>
+                    Analista de Datos con experiencia en limpieza de datos,
+                    reportabilidad y desarrollo de dashboards interactivos.
+                    Me enfoco en usar los datos con propósito, transformándolos
+                    en decisiones que mejoren procesos, equipos y resultados.
+                </p>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+                <p><strong>Conoce algunos de mis proyectos 👇</strong></p>
+            </header>
+        </article>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+        <!-- Posts -->
+        <section class="posts">
 
-			</div>
+            <!-- Proyecto 1 -->
+            <article>
+                <header>
+                    <span class="date">Noviembre, 2022</span>
+                    <h2>
+                        <a href="#">Proyecto Limpieza de Datos 1</a>
+                    </h2>
+                </header>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js?v=2"></script>
-			<script src="assets/js/jquery.scrollex.min.js?v=2"></script>
-			<script src="assets/js/jquery.scrolly.min.js?v=2"></script>
-			<script src="assets/js/browser.min.js?v=2"></script>
-			<script src="assets/js/breakpoints.min.js?v=2"></script>
-			<script src="assets/js/util.js?v=2"></script>
-			<script src="assets/js/main.js?v=2"></script>
-		git add index.html
-		git commit -m "Forzar deployment GitHub Pages"
-		git push origin main
+                <a href="#" class="image fit">
+                    <img src="images/pic02.jpg" alt="Proyecto de limpieza de datos 1" />
+                </a>
 
+                <p>
+                    Proyecto enfocado en la limpieza, estandarización y validación
+                    de datos para mejorar la calidad de la información y la
+                    reportabilidad.
+                </p>
 
-	</body>
+                <ul class="actions special">
+                    <li><a href="#" class="button">Ver proyecto</a></li>
+                </ul>
+            </article>
 
+            <!-- Proyecto 2 -->
+            <article>
+                <header>
+                    <span class="date">Agosto, 2022</span>
+                    <h2>
+                        <a href="#">Proyecto Limpieza de Datos 2</a>
+                    </h2>
+                </header>
+
+                <a href="#" class="image fit">
+                    <img src="images/pic03.jpg" alt="Proyecto de limpieza de datos 2" />
+                </a>
+
+                <p>
+                    Análisis y preparación de datos para dashboards ejecutivos,
+                    optimizando procesos de carga y visualización en Power BI.
+                </p>
+
+                <ul class="actions special">
+                    <li><a href="#" class="button">Ver proyecto</a></li>
+                </ul>
+            </article>
+
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+
+        <section>
+            <form method="post" action="#">
+                <div class="fields">
+                    <div class="field">
+                        <label for="name">Nombre</label>
+                        <input type="text" name="name" id="name" />
+                    </div>
+
+                    <div class="field">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" />
+                    </div>
+
+                    <div class="field">
+                        <label for="message">Mensaje</label>
+                        <textarea name="message" id="message" rows="3"></textarea>
+                    </div>
+                </div>
+
+                <ul class="actions">
+                    <li><input type="submit" value="Enviar mensaje" /></li>
+                </ul>
+            </form>
+        </section>
+
+        <section class="split contact">
+
+            <section>
+                <h3>Email</h3>
+                <p>
+                    <a href="mailto:paulina.vera@email.com">
+                        paulina.vera@email.com
+                    </a>
+                </p>
+            </section>
+
+            <section>
+                <h3>GitHub</h3>
+                <p>
+                    <a href="https://github.com/" target="_blank">
+                        github.com/tuusuario
+                    </a>
+                </p>
+            </section>
+
+            <section>
+                <h3>LinkedIn</h3>
+                <p>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        linkedin.com/in/tuusuario
+                    </a>
+                </p>
+            </section>
+
+        </section>
+    </footer>
+
+    <!-- Copyright -->
+    <div id="copyright">
+        <ul>
+            <li>&copy; Paulina Vera Cid</li>
+            <li>Diseño: <a href="https://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </div>
+
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js?v=2"></script>
+<script src="assets/js/jquery.scrollex.min.js?v=2"></script>
+<script src="assets/js/jquery.scrolly.min.js?v=2"></script>
+<script src="assets/js/browser.min.js?v=2"></script>
+<script src="assets/js/breakpoints.min.js?v=2"></script>
+<script src="assets/js/util.js?v=2"></script>
+<script src="assets/js/main.js?v=2"></script>
+
+</body>
 </html>
-
-
-
-
 
 
 
