--- a/index.html
+++ b/index.html
@@ -59,12 +59,23 @@
         <article class="post featured">
             <header class="major">
                 <p>
-                    Analista de Datos con experiencia en limpieza de datos,
-                    reportabilidad y desarrollo de dashboards interactivos.
-                    Me enfoco en usar los datos con propósito, transformándolos
-                    en decisiones que mejoren procesos, equipos y resultados.
-                </p>
+                    Soy Ingeniera Comercial y Analista de Datos con más de 3 años de
+					experiencia en análisis, limpieza y visualización de datos.
+				</p>
+				
+				<p>
+					He trabajado apoyando la toma de decisiones mediante dashboards,
+                	reportes y análisis orientados a mejorar procesos y resultados.
+                	Me interesa especialmente el cruce entre datos, negocio y
+                	experiencia de usuario.
+            	</p>
 
+            	<p>
+                	Actualmente busco seguir desarrollándome en roles de Data
+                	Analytics / Business Intelligence, en equipos donde los datos
+                	se utilicen con propósito.
+				</p>
+                
                 <p><strong>Conoce algunos de mis proyectos 👇</strong></p>
             </header>
         </article>
@@ -204,6 +215,7 @@
 
 </body>
 </html>
+
 
 
 
