--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <article class="post featured">
             <header class="major">
                 <p>
-                    Soy Ingeniera Comercial y Analista de Datos con más de 3 años de
+                    Soy Ingeniera Comercial y Analista de Datos con
 					experiencia en análisis, limpieza y visualización de datos.
 				</p>
 				
@@ -214,6 +214,7 @@
 
 </body>
 </html>
+
 
 
 
